Last minute fix

--- a/templates/main/banner.html.twig
+++ b/templates/main/banner.html.twig
@@ -5,14 +5,14 @@
         <p > This platform is the <span>simplest way</span>
             to extend the life of your goods
             by giving them a new owner.
-            <br> Swish <span>locally</span>, exchange <span>on your own terms</span>, swap <span>easily</span>!
+            <br> Swap <span>locally</span>, exchange <span>on your own terms</span>, swap <span>easily</span>!
         </p>
     {% else %}
         <h2>Welcome to {{ 'APP.TITLE'|trans }}!</h2>
         <p > This platform is the <span>simplest way</span>
             to extend the life of your goods
             by giving them a new owner.
-            <br> Swish <span>locally</span>, exchange <span>on your own terms</span>, swap <span>easily</span>!
+            <br> Swap <span>locally</span>, exchange <span>on your own terms</span>, swap <span>easily</span>!
         </p>
     {% endif %}
 </div>
